--- a/src/components/search-bar/SearchBarr.css
+++ b/src/components/search-bar/SearchBarr.css
@@ -19,6 +19,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     height: 40px; /* Set a specific height for the search bar */
     margin-bottom: 15px;
+    margin-left: 30px;
 }
 
 .search-bar input {
@@ -62,7 +63,7 @@
     height: 55px; 
     width: 55px;
     margin-bottom: 15px;
-    
+    margin-right: 30px;
 }
 
 .filter-button:hover {
